--- a/src/App.css
+++ b/src/App.css
@@ -5,4 +5,33 @@
   color: #443e3e;
   text-shadow: 1px 1px 5px #fff;
 }
+
+* {
+  box-sizing: border-box;
+}
+body {
+  background-color: #f4f4f4;
+  color: #414b3c;
+  font-family: 'Zen Dots', serif;
+}
+.character {
+  border: 1px solid #d2d2d2;
+  box-shadow: 0px 1px 6px -2px #807f7f;
+  border-radius: 8px;
+  margin: 16px;
+  padding: 16px 8px 12px 16px;
+  background-color: whitesmoke;
+  opacity: 0.8;
+}
+.name {
+  width: 60%;
+  display: flex;
+  justify-content: space-between;
+  margin: 4px 0 4px 0;
+}
+/* button {
+  border-radius: 4px;
+} */
+
+
 /* write your parent styles in here for your App.js */
