--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
+  font-family: 'Zen Dots';
   background-image: url('./images/sw-bg.jpg');
   background-size: cover;
 }
