Trying to get button to work

--- a/src/App.css
+++ b/src/App.css
@@ -29,9 +29,9 @@ body {
   justify-content: space-between;
   margin: 4px 0 4px 0;
 }
-/* button {
+button {
   border-radius: 4px;
-} */
+}
 
 
 /* write your parent styles in here for your App.js */
